--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
-  },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.21.1",
+    "antd": "^5.21.5",
+    "bcryptjs": "^2.4.3",
+    "next": "^14.2.16",
+    "next-auth": "^4.24.8",
+    "pg": "^8.13.0",
+    "prisma": "^5.21.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
