--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -17,6 +18,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.1",
     "antd": "^5.21.5",
     "bcryptjs": "^2.4.3",
